--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: base
           {% endif %}
         </div>
       {% endif %}
-
+      <img src="https://api.hanyou.dev/hanyou-dev-inc-visitor-counter" width="0" height="0" style="display: none;">
       <article role="main" class="blog-post">
         {{ content }}
       </article>
